#114; sit progress bar slightly over table to prevent minor shifting

--- a/sp1-custom-table/src/app/shared/components/table/table.component.scss
+++ b/sp1-custom-table/src/app/shared/components/table/table.component.scss
@@ -32,12 +32,20 @@
 .table-container {
   margin: 0 auto;
   overflow: auto;
+  position: relative;
 
   &.is-loading {
     :not(:first-child) {
       opacity: 55%;
     }
   }
+}
+
+.progress-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 110;
 }
 
 table {
